--- a/node-Producer/package.json
+++ b/node-Producer/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.1",
+    "clean-response": "^1.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.1",
