--- a/go-Consumer/pkg/config/.env
+++ b/go-Consumer/pkg/config/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://eminoz:Q8DZaO6sdnBDA4Uj@cluster0.cvbx9.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URI=mongodb://localhost:27017/user
 APP_SECRET=secretkey
